--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -8,8 +8,8 @@
   --white: white;
   --black: rgb(48, 48, 48);
   --gray: rgb(250, 250, 250);
-  --primary: rgb(175, 93, 237);
-  --second: rgb(242, 227, 255);
+  --primary: rgb(169, 109, 216);
+  --second: rgb(245, 235, 252);
   --hover-color: #f3f3f3;
   --bar-color: rgba(0, 0, 0, 0.1);
   --theme-color: var(--gray);
@@ -29,7 +29,7 @@
   --white: rgb(30, 30, 30);
   --black: rgb(187, 187, 187);
   --gray: rgb(21, 21, 21);
-  --primary: rgb(175, 93, 237);
+  --primary: rgb(169, 109, 216);
   --second: rgb(50, 44, 55);
   --hover-color: #323232;
 
@@ -89,7 +89,7 @@
 html {
   height: var(--full-height);
 
-  font-family: "Noto Sans", "SF Pro SC", "SF Pro Text", "SF Pro Icons",
+  font-family: "Noto Sans SC", "SF Pro SC", "SF Pro Text", "SF Pro Icons",
     "PingFang SC", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
@@ -105,7 +105,6 @@ body {
   align-items: center;
   user-select: none;
   touch-action: pan-x pan-y;
-  overflow: hidden;
 
   @media only screen and (max-width: 600px) {
     background-color: var(--second);
@@ -306,9 +305,6 @@ pre {
   &:hover {
     filter: brightness(0.9);
   }
-  &:focus {
-    filter: brightness(0.95);
-  }
 }
 
 .error {
@@ -350,11 +346,15 @@ pre {
   justify-content: center;
   border: var(--border-in-light);
   box-shadow: var(--card-shadow);
-  border-radius: 11px;
+  border-radius: 10px;
 }
 
 .one-line {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.bor_a{
+	border-radius: 50%;
 }
